Added a context menu to show when right clicking a file or a folder in fileViewing window to add a share button

--- a/Client/styles.css
+++ b/Client/styles.css
@@ -198,3 +198,9 @@ textarea::-webkit-scrollbar-thumb:hover {
   font-weight: bold;
   font-style: italic;
 }
+
+.context-menu {
+  display: none;
+  position: absolute;
+  z-index: 10;
+}
