Added the style needed for the share management dialog

--- a/Client/styles.css
+++ b/Client/styles.css
@@ -199,18 +199,18 @@ textarea::-webkit-scrollbar-thumb:hover {
   font-style: italic;
 }
 
-.compile-container {
+.compile-container, .shares-container {
   margin-bottom: 10px;
   text-align: left;
 }
 
-.compile-container label {
+.compile-container, .shares-container label {
   display: flex;
   line-height: 25px;
   color: #023939;
 }
 
-.compile-container h4 {
+.compile-container, .shares-container h4 {
   margin-top: -10px;
 }
 
@@ -274,4 +274,8 @@ input[type="checkbox"]:checked::before {
 .context-menu-icon {
   width: 20px;
   height: 20px;
+}
+
+.shares-form {
+  text-align: left;
 }
